--- a/osobne_informácie.html
+++ b/osobne_informácie.html
@@ -18,9 +18,9 @@
 
 	<h2 style="color:MediumSeaGreen;">Vzdelanie</h2>
 	<ul>
-	<p style="border:2px solid Blue;">2016-2021 Gymnázium, Hviezdoslavova 326/20, 060 01 Kežmarok</p>
-	<p style="border:2px solid Blue;">2007-2019 Základná umelecká škola Antona Cígera, Kostolné námestie 403, 060 01 Kežmarok</p>
-	<p style="border:2px solid Blue;">2007-2016 Grundschule, Hradné námestie 38, 060 01 Kežmarok</p>
+	<p style="border:8px solid Red;">2016-2021 Gymnázium, Hviezdoslavova 326/20, 060 01 Kežmarok</p>
+	<p style="border:8px solid Red;">2007-2019 Základná umelecká škola Antona Cígera, Kostolné námestie 403, 060 01 Kežmarok</p>
+	<p style="border:8px solid Red;">2007-2016 Grundschule, Hradné námestie 38, 060 01 Kežmarok</p>
 	</ul>
 
 	<h2 style="color:MediumSeaGreen;">Jazykové znalosti</h2>
@@ -33,8 +33,8 @@
 
 	<h2 style="color:MediumSeaGreen;">Počítačové znalosti</h2>
 	<ul>
-	<p style="border:2px solid Brown;">Pokročilé znalosti: Microsoft Word, Microsoft Excel, Microsoft Power Point, Skicár</p>
-	<p style="border:2px solid Brown;">Základy: Html, Python, Lazarus, Movavi, Audacity, Inkscape</p>
+	<p style="border:6px solid Grey;">Pokročilé znalosti: Microsoft Word, Microsoft Excel, Microsoft Power Point, Skicár</p>
+	<p style="border:6px solid Grey;">Základy: Html, Python, Lazarus, Movavi, Audacity, Inkscape</p>
 	</ul>
 
 	<h2 style="color:MediumSeaGreen;">Vodičský preukaz</h2>
